# dps-scpi

./: CMakeLists.txt  README.md
include/: log.h  scpi-def.h  sd-helper.h
scripts/: dps-scpid.service
src/: main.c  scpi-def.c  sd-helper.c
